UtahLiveDataTest/src/objects/Announcement__c.object
<CustomObject>
    <description>[Business] All the details for the Announcements are stored in this object ,It used two different recordTypes for Grantee and Grantor</description>
    <fields>
        <fullName>AbbreviationNumber__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>Abbreviation Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <formula>Program__r.Abbreviation__c + AbbreviationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Program__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Program__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveFunOppDescription__c</fullName>
        <formula>HYPERLINK(&apos;apex/AnnouncementView?id=&apos;&amp;Id, &apos;Description&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdministrationBureauUnit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Unit</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Opportunities (Bureau Unit)</relationshipLabel>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Administration__c</fullName>
        <formula>Program__r.OrganizationName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyContact__c</fullName>
        <label>Agency Contact</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgencyMailingAddress__c</fullName>
        <label>Agency Mailing Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllowApplicationsWithdrawl__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Applications to be Withdrawn</description>
        <label>Allow Applications to be Withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowEditingSubmittedApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether the Submitted application can be edited before it reaches its deadline</description>
        <inlineHelpText>This field determines whether the Submitted application can be edited before it reaches its deadline</inlineHelpText>
        <label>Allow Editing Submitted Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowEditingSubmittedPreApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>his field determines whether the Submitted Pre-applicationcan be edited before it reaches its deadline</description>
        <inlineHelpText>his field determines whether the Submitted Pre-application can be edited before it reaches its deadline</inlineHelpText>
        <label>Allow Editing Submitted Pre-Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowMultipleApplicationsFromAnOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether on organization can submit multiple applications program allows expanded authority to the recipients.</description>
        <label>Allow Multiple Applications from an Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowMultipleApplicationsFromOrg__c</fullName>
        <formula>If(MaxApplicationsAllowed__c&gt;1,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AllowMultipleApplicationsFromAnOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnnGroupCode__c</fullName>
        <label>Ann Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnoucementGroupCodeFormula__c</fullName>
        <description>Field created to run the criteria based sharing rule for sharing the announcement</description>
        <formula>Organization__r.GroupCode__c</formula>
        <label>Annoucement Group Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementAvailableDateTime__c</fullName>
        <description>The date and time the Announcement will be made available to recipients, to fill and submit to the grantor.</description>
        <label>Announcement Available Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AnnouncementDescription__c</fullName>
        <description>Description of the announcement.</description>
        <label>Announcement Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AnnouncementId__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Announcement Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementNameCheck__c</fullName>
        <formula>If(AnnouncementName__c ==&apos;Enter the Title&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Announcement Name Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnnouncementName__c</fullName>
        <description>Title of the announcement.</description>
        <label>Announcement Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementNumber__c</fullName>
        <label>Funding Opportunity Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnouncementReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Announcement Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnouncementType__c</fullName>
        <description>Announcement Type</description>
        <inlineHelpText>Type of Announcement</inlineHelpText>
        <label>Announcement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sole Source/Directed</fullName>
                </value>
                <value>
                    <fullName>Formula Grants</fullName>
                </value>
                <value>
                    <fullName>Sole Source/Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnticipatedAwardDate__c</fullName>
        <label>Anticipated Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppealsDeadline__c</fullName>
        <description>Appeals Deadline</description>
        <label>Appeals Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicableDocuments__c</fullName>
        <formula>HYPERLINK(&apos;http://opgs.dc.gov/page/opgs-district-grants-clearinghouse&apos;, &apos;NOFA RFA&apos;)</formula>
        <label>Applicable Documents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationButtonDecision__c</fullName>
        <formula>NOT(Text($User.UserType) != &apos;Standard&apos; &amp;&amp;  CloseDate__c &gt;=  TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Application Button Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationCreatedOutside__c</fullName>
        <description>This field</description>
        <label>Application created outside this System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationCreated__c</fullName>
        <formula>NOT(NumberOfApplications__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationDeadlineWithDateTime__c</fullName>
        <label>Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationFinalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal User who is assigned as the Final Approver for Applications belonging to a Review Group</description>
        <inlineHelpText>Internal User who is assigned as the Final Approver for Applications belonging to a Review Group</inlineHelpText>
        <label>Application Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationPostDeadlineMessage__c</fullName>
        <label>Application Post Deadline Message</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ApplicationReviewCompletedDate__c</fullName>
        <label>Application Review Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationReviewGroupCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to create application review group only once if not created earlier</description>
        <label>Application Review Group Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationSubmissionEmailTemplate__c</fullName>
        <description>This field holds email template  name for Application submission .</description>
        <inlineHelpText>This field holds email template  name for Application submission .</inlineHelpText>
        <label>Application Submission Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationsAwarded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Applications Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationsReviewStatus__c</fullName>
        <label>Applications Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationswithNegotiationCompleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Applications with Negotiation Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationswithNegotiationInProcess__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Applications with Negotiation In Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplyingAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applying Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Opportunities (Applying Agency)</relationshipLabel>
        <relationshipName>Funding_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalComments__c</fullName>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ArchiveDate__c</fullName>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AttachmentsRequired__c</fullName>
        <label>Required Attachments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizationStatute__c</fullName>
        <description>Federal Award Authorization Statute number</description>
        <label>Authorization Statute #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardApprovalEmailTemplate__c</fullName>
        <inlineHelpText>Name of email template to be send after Approval.
Name of template.</inlineHelpText>
        <label>Award Approval Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_OpportunitieshrnI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_OpportunitieshrnS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardCeiling__c</fullName>
        <description>The lowest amount an applicant can request.</description>
        <label>Award Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardFloor__c</fullName>
        <description>The highest amount an applicant can request.</description>
        <label>Award Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardRejectionEmailTemplate__c</fullName>
        <inlineHelpText>Email template name to send after rejection.</inlineHelpText>
        <label>Award Rejection Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Funding Opportunities</relationshipLabel>
        <relationshipName>Funding_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardingFedAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Awarding Federal Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FedAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardingFederalAgencyDOH__c</fullName>
        <label>Awarding Federal Agency DOH</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Center for Disease Prevention(CDC)</fullName>
                </value>
                <value>
                    <fullName>HRSA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AwardingFederalAgency__c</fullName>
        <label>Awarding Federal Agency Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <description>Is Budget Category needed at Individual or Total Level?</description>
        <label>Budget Category Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Category Level</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Overall Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Category_Package__c</fullName>
        <label>Budget Category Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Non-Construction</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Amount available for the announcement</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetingPeriod__c</fullName>
        <description>Is Budgeting required for first period or all periods ?</description>
        <label>Budgeting Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only First Budget Period</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>All Budget Periods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BureauUnitNameFormula__c</fullName>
        <formula>AdministrationBureauUnit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bureau Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessandTechnicaldomainKnowledge__c</fullName>
        <label>Business and Technical domain Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <formula>Program__r.FederalProgramCFDA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryExplanation__c</fullName>
        <label>Category Explanation</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategoryOfFundingActivity__c</fullName>
        <label>Category Of Funding Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AG: Agriculture</fullName>
                </value>
                <value>
                    <fullName>AR: Arts</fullName>
                </value>
                <value>
                    <fullName>BC: Business and Commerce</fullName>
                </value>
                <value>
                    <fullName>CD: Community Development</fullName>
                </value>
                <value>
                    <fullName>CP: Consumer Protection</fullName>
                </value>
                <value>
                    <fullName>DPR: Disaster Prevention and Relief</fullName>
                </value>
                <value>
                    <fullName>ED: Education</fullName>
                </value>
                <value>
                    <fullName>ELT: Employment, Labor and Training</fullName>
                </value>
                <value>
                    <fullName>EN: Energy</fullName>
                </value>
                <value>
                    <fullName>ENV: Environment</fullName>
                </value>
                <value>
                    <fullName>FN: Food and Nutrition</fullName>
                </value>
                <value>
                    <fullName>HL: Health</fullName>
                </value>
                <value>
                    <fullName>HO: Housing</fullName>
                </value>
                <value>
                    <fullName>HU: Humanities</fullName>
                </value>
                <value>
                    <fullName>ISS: Income Security and Social Service</fullName>
                </value>
                <value>
                    <fullName>IS: Information and Statistics</fullName>
                </value>
                <value>
                    <fullName>LJL: Law, Justice and Legal Services</fullName>
                </value>
                <value>
                    <fullName>NR: Natural Resources</fullName>
                </value>
                <value>
                    <fullName>RD: Regional Development</fullName>
                </value>
                <value>
                    <fullName>ST: Science and Technology</fullName>
                </value>
                <value>
                    <fullName>T: Transportation</fullName>
                </value>
                <value>
                    <fullName>O: Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Earmark</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeRequestAssignmentEmailTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request Assignment Email Template</label>
        <referenceTo>GNT__EmailTemplateConfig__c</referenceTo>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckOwner__c</fullName>
        <formula>OwnerId != $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClonedFrom__c</fullName>
        <label>Cloned From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Application Deadline(Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollaborationandWorkShare__c</fullName>
        <label>Collaboration and Work Share</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompetitionId__c</fullName>
        <label>Competition Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPackageIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check on Grantee side if a Construction Application Package is included or Non Construction</description>
        <label>Construction Package Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConstructionPackageValue__c</fullName>
        <formula>IF(ISPICKVAL(Budget_Category_Package__c , &apos;Construction&apos;) , &apos;Construction&apos;, &apos;Non construction&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Package Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funding Opportunities</relationshipLabel>
        <relationshipName>Announcements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CostSharing__c</fullName>
        <label>Cost Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prince George’s</fullName>
                </value>
                <value>
                    <fullName>Montgomery County</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>TEXT(MONTH( DATEVALUE(CreatedDate) ))</formula>
        <label>CreatedMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedFromLead__c</fullName>
        <description>This is the ID for the Lead from Which the Opportunity is created</description>
        <formula>NOT(FOALead__c = null)</formula>
        <label>Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentProjectPeriod__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(EstimatedProjectPeriodEndDate__c)),NOT(ISBLANK(EstimatedProjectPeriodStartDate__c))),TEXT(MONTH(EstimatedProjectPeriodStartDate__c))+&quot;/&quot; +TEXT(DAY(EstimatedProjectPeriodStartDate__c))+&quot;/&quot; +TEXT(YEAR(EstimatedProjectPeriodStartDate__c))+&quot;--&quot;+ TEXT(MONTH(EstimatedProjectPeriodEndDate__c))+&quot;/&quot; +TEXT(DAY(EstimatedProjectPeriodEndDate__c))+&quot;/&quot; +TEXT(YEAR(EstimatedProjectPeriodEndDate__c)) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStepApprovalStatus__c</fullName>
        <label>CurrentReviewStepApprovalStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStepFormula__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ReviewStepView?id=&apos;+CurrentReviewStepId__c, CurrentReviewStep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Review Step Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStepId__c</fullName>
        <label>Current Review Step Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentReviewStep__c</fullName>
        <label>Current Review Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWVariable1__c</fullName>
        <description>Directional Weight for Variable1 for Formula Grants Announcements</description>
        <inlineHelpText>Directional Weight for Variable1 for Formula Grants Announcements</inlineHelpText>
        <label>Directional Weight Variable 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWVariable2__c</fullName>
        <description>Directional Weight for Variable2 for Formula Grants Announcements</description>
        <inlineHelpText>Directional Weight for Variable2 for Formula Grants Announcements</inlineHelpText>
        <label>Directional Weight Variable 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWVariable3__c</fullName>
        <description>Directional Weight for Variable3 for Formula Grants Announcements</description>
        <inlineHelpText>Directional Weight for Variable3 for Formula Grants Announcements</inlineHelpText>
        <label>Directional Weight Variable 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysLeft__c</fullName>
        <formula>IF( DATEVALUE(ApplicationDeadlineWithDateTime__c) &gt;  TODAY() ,DATEVALUE(ApplicationDeadlineWithDateTime__c) -  TODAY(),0)</formula>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailedBudgetingRequired__c</fullName>
        <label>Detailed Budgeting Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayEditButton__c</fullName>
        <formula>NOT(AND(TEXT($User.UserType) = &apos;Standard&apos; , TEXT( Status__c ) != &apos;Disapproved&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayGranteeEditSubmitButton__c</fullName>
        <formula>OR(ISPICKVAL( Status__c , &apos;Approved&apos;),ISPICKVAL( Status__c , &apos;Converted to Application&apos;),ISPICKVAL( Status__c , &apos;Converted to Pre-Application&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Grantee Edit or Submit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayLayoutTabs__c</fullName>
        <formula>Text($User.UserType)!= &apos;Standard&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field decide whether to show a particular tab on dynamic layout</inlineHelpText>
        <label>Display Layout Tabs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplaySubmitForApprovalButton__c</fullName>
        <formula>NOT(AND(OR(TEXT( Status__c) = &apos;In Progress&apos;  , TEXT( Status__c) = &apos;Change Requested&apos;  ) , TEXT($User.UserType) = &apos;Standard&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls the display of the Submit for Approval Button. If the Announcement Status is &apos;In Progress&apos; or &apos;Change Requested&apos; and User Type is &apos;Standard&apos; display the Submit for Approval Button</inlineHelpText>
        <label>Display Submit for Approval Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display to External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayToGuestUser__c</fullName>
        <formula>Text($User.UserType) == &apos;Standard&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display To Guest User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueinDays__c</fullName>
        <formula>If(DATEVALUE( ApplicationDeadlineWithDateTime__c ) - Today()&gt;0,DATEVALUE(ApplicationDeadlineWithDateTime__c) - Today(),0)</formula>
        <label>Due in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>